# claude-office

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI_UPDATE.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
backend/: Makefile  README.md  claude_office.db  floors.toml  pyproject.toml  pyrightconfig.json
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/core/: beads_poller.py  broadcast_service.py  building_orchestrator.py  constants.py  coordination_poller.py  event_processor.py  floor_config.py  jsonl_parser.py  logging.py  marker_file.py  marker_watcher.py  office_layout.py  path_utils.py  plan_parser.py  plan_watcher.py  product_mapper.py  quotes.py  room_orchestrator.py  run_aggregator.py  session_tagger.py  state_machine.py  summary_service.py  task_file_poller.py  token_tracker.py  transcript_poller.py  transcript_watcher.py  whiteboard_tracker.py
backend/app/db/: coordination.py  database.py  models.py
backend/tests/: conftest.py  test_agent_functions.py  test_ao_adapter.py  test_api.py  test_beads_poller.py  test_broadcast_run_id_validation.py  test_building_orchestrator.py  test_coordination_routes.py  test_event_processor_run_markers.py  test_events_run.py  test_floor_config.py  test_jsonl_parser.py  test_marker_event_async_safe.py  test_marker_file.py  test_marker_watcher.py  test_models_phase4.py  test_models_runs.py  test_ops_destinations.py  test_ops_runner.py  test_path_utils.py  test_plan_parser.py  test_plan_watcher.py  test_pr44_critical_regressions.py  test_product_mapper.py  test_project_grouped_state.py  test_project_grouped_state_adv.py  test_projects_api.py  test_quotes.py  test_ralph_pipeline_smoke.py  test_room_orchestrator.py  test_run_aggregator.py  test_runs_api.py  test_seat_persistence.py  test_security_hardening.py  test_session_handler_ralph.py  test_session_tagger.py  test_silent_swallow_logs.py  test_simulation_pipeline.py  test_state_machine.py  test_state_machine_departed.py  (+7 more)
desktop/: .gitignore  (+3 more)
tui/: Cargo.toml
tui/src/: app.rs  event.rs  main.rs  ui.rs  ws.rs
(+389 files in other folders)
